tests/__snapshots__/directive-template-test-text-with-tstyche-if-stderr.snap.txt
Error: Type 'string' is not the same as type 'number'.

   6 | });
   7 | test("is number a string?", () => {
   8 |   expect<string>().type.toBe<number>();
     |                              ~~~~~~
   9 | });
  10 | 

       at ./__typetests__/isString.tst.ts:8:30 ❭ is number a string?

